--- a/style.css
+++ b/style.css
@@ -19,3 +19,23 @@ body {
 .next-red {
   background-color: rgba(255, 0, 0, 0.2);
 }
+
+.col.empty {
+  cursor: pointer;
+}
+
+.next-red {
+  background-color: rgba(255, 0, 0, 0.2);
+}
+
+.next-black {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.col.red {
+  background-color: red;
+}
+
+.col.black {
+  background-color: black;
+}
